Add open or create project at startup #8
- add project folder as parameter to main class