@@ -1,6 +1,6 @@
 package com.itquasr.multiverse.proton;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.UUID;
 
 public class Utils {
@@ -8,6 +8,6 @@ public class Utils {
     public static String TMP_DIR = System.getProperty("java.io.tmpdir") + "/" + UUID.randomUUID();
 
     static {
-        Path.of(TMP_DIR).toFile().mkdirs();
+        Paths.get(TMP_DIR).toFile().mkdirs();
     }
 }
